--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
 	text-decoration: none;
 	list-style: none;
 	box-sizing: border-box;
+	
 
 }
 
@@ -16,12 +17,15 @@ body {
 	font-family: arial;
 
 
+	
+
+
 }
 nav {
 	background: #8e2727;
 	height: 85px;
 	width: 100%;
-	transition: 2s;
+	transition: 3s;
 
 }
 @media only screen and (max-width: 992px) {
@@ -44,26 +48,27 @@ label.logo {
 nav ul{
 	float: right;
 	margin-right: 20px;
-	transition: 1s;
+	transition: 2s;
 }
 nav ul li{
 	display: inline-block;
 	line-height: 80px;
 	margin: 0 5px;
-	transition: 1s;
+	transition: 3s;
 }
+
 nav ul li a{
 	color: white;
-	font-size: 17px;
+	font-size: 20px;
 	padding: 7px 13px;
 	border-radius: 10px;
-	transition: 1s;
+	
+	
 	
 }
 a.active, a:hover{
 	background: black;
-	transition: 1s;
-	cursor: 
+	cursor: pointer;
 
 }
 .checkbtn {
@@ -99,7 +104,7 @@ a.active, a:hover{
 		top: 80px;
 		left: -100%;
 		text-align: center;
-		transition: all .5s;
+		transition: .5s;
 	}
 	nav ul li{
 		display: block;
@@ -120,22 +125,23 @@ a.active, a:hover{
 }
 
 
-img {
-	width: 110px;
+.logo{
+	width: 100px;
 	transform: rotate(360deg);
-	transition: 2s;
 	border-radius: 50px;
 	padding: 10px;
 	margin-top: -10px;
+	margin-left: 60px;
 }
 
 @media only screen and (max-width: 992px) {
-	img {
-	width: 100px;
+	.logo {
+	width: 92px;
 	transform: rotate(360deg);
 	transition: 2s;
 	border-radius: 50px;
 	margin-top: -10px;
+	margin-left: 10px;
 	padding: 10px;
     }
 }
@@ -143,28 +149,73 @@ img {
 .txt1 {
 	text-align: center;
 	color: white;
-	font-style: inherit;
 	font-family: 'Monteserrat', sans-serif;
 	font-size: 50px;
-	transition: 2.0s;
 	margin: 0;
 	padding: 250px;
 	background-size: cover;
+	transition: 2s;
    
 }
 
 
-@media screen and (max-width: 992px)  {
+@media screen and (max-width: 992px) {
 	.txt1 {
 	color: white;
 	font-style: inherit;
 	font-family: 'Monteserrat', sans-serif;
 	font-size: 30px;
-	transition: 2.0s;
 	margin: 0;
 	padding: 95px;
 	background-size: cover;
+
     }
 }
 
+.txt2 {
+	color: white;
+	text-align: center;
+	font-size: 50px;
+	font-family: 'Monteserrat', sans-serif;
+	padding: 200px;
+	margin: 0;
+	background: #8e2727;
+}
+@media screen and (max-width: 992px) {
+	.txt2 {
+	color: white;
+	font-style: inherit;
+	font-family: 'Monteserrat', sans-serif;
+	font-size: 40px;
+	margin: 0;	
+	padding: 160px;
 	
+
+    }
+}
+.container img { 
+	width: 1000px;
+	transform: translate(450px, -200px);
+	border-radius: 30px;
+	height: 400px;
+	
+
+
+}
+
+@media screen and (max-width: 992px) {
+	.container img {
+	width: 400px;
+	transform: translate(50px, -150px);
+	border-radius: 20px;
+	height: 200px;
+
+
+    }
+}
+
+
+
+
+
+
