--- a/main.css
+++ b/main.css
@@ -275,6 +275,17 @@ a.active, a:hover{
 	.moto {
 	width: 200px;
 	transform: translate(205px, -725px);
+		@keyframes slidein {
+  from {
+    margin-left: -600px;
+    
+  }
+
+  to {
+    margin-left: 1200px;
+  }
+}
+
     }
 }
 
