--- a/main.css
+++ b/main.css
@@ -279,6 +279,14 @@ a.active, a:hover{
     }
 }
 
+.txt4 {
+      color: white;
+      text-align: center;
+      font-size: 55px;
+      font-family: 'Monteserrat', sans-serif;
+      padding: 80px;
+      margin: 0;
+      background: #8e2727;
 
 
 
