--- a/main.css
+++ b/main.css
@@ -205,6 +205,7 @@ a.active, a:hover{
 	height: 600px;
 	max-height: 100%;
 	max-width: 100%;
+
 	
 
 
@@ -277,6 +278,7 @@ a.active, a:hover{
 	.moto {
 	width: 200px;
 	transform: translate(175px, -725px);
+	display: none;
     }
 }
 
@@ -289,14 +291,8 @@ a.active, a:hover{
       margin: 0;
       background: #8e2727;
       margin-left: -25px;
-}
-@media only screen and (max-width: 992px) {
-	.txt4 {
-   margin-left: -25px;
-   font-size: 50px;
-}
-}
 
+}
 .menu{
     width: 100%;
     padding: 10rem 5rem;
