--- a/main.css
+++ b/main.css
@@ -293,6 +293,14 @@ a.active, a:hover{
       margin-left: -25px;
 
 }
+@media only screen and (max-width: 992px) {
+	.txt4 {
+   margin-left: -30px;
+   margin-left: -25px;
+   font-size: 50px;
+}
+}
+
 .menu{
     width: 100%;
     padding: 10rem 5rem;
