--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: japa;
+	src:url('fonts/NightinTokyo.ttf')
+}
+
 * {
 	padding: 0;
 	margin: 0;
@@ -153,7 +158,7 @@ a.active, a:hover{
 	text-align: center;
 	color: white;
 	font-family: 'Monteserrat', sans-serif;
-	font-size: 50px;
+	font-size: 60px;
 	margin: 0;
 	padding: 250px;
 	background-size: cover;
@@ -178,7 +183,7 @@ a.active, a:hover{
 .txt2 {
 	color: white;
 	text-align: center;
-	font-size: 50px;
+	font-size: 60px;
 	font-family: 'Monteserrat', sans-serif;
 	padding: 200px;
 	margin: 0;
@@ -244,14 +249,15 @@ a.active, a:hover{
 	font-size: 35px;
 	margin: 0;	
 	padding: 50px;
-	transform: translate(-18px, -0px);
+	transform: translate(-20px, 20px);
         margin-left: 18px;
     }
 }
 
 .moto {
-	transform: translate(500px, -1565px);
+	transform: translate(500px, -1585px);
 	width: 200px;
+	display: none;
 }
 
 .moto {
@@ -290,9 +296,10 @@ a.active, a:hover{
       padding: 80px;
       margin: 0;
       background: #8e2727;
-      margin-left: -25px;
+      margin-left: -25px;	
 
 }
+
 @media only screen and (max-width: 992px) {
 	.txt4 {
    margin-left: -30px;
@@ -410,9 +417,12 @@ a.active, a:hover{
     text-align: center;
 }
 
+
+
 .menu-title{
     font-size: 3rem;
     text-align: center;
+    font-family: japa;
 }
 
 .price{
