--- a/main.css
+++ b/main.css
@@ -157,7 +157,7 @@ a.active, a:hover{
 .txt1 {
 	text-align: center;
 	color: white;
-	font-family: 'Monteserrat', sans-serif;
+	font-family: 'japa';
 	font-size: 60px;
 	margin: 0;
 	padding: 250px;
