--- a/main.css
+++ b/main.css
@@ -170,7 +170,7 @@ a.active, a:hover{
 	.txt1 {
 	color: white;
 	font-style: inherit;
-	font-family: 'Monteserrat', sans-serif;
+	font-family: 'japa';
 	font-size: 30px;
 	margin: 0;
 	padding: 70px;
