--- a/main.css
+++ b/main.css
@@ -193,7 +193,7 @@ a.active, a:hover{
 	.txt2 {
 	color: white;
 	font-style: inherit;
-	font-size: 'Reggae One', cursive;
+	font-size: 'japa'
 	font-size: 30px;
 	margin: 0;	
 	padding: 100px;
