--- a/main.css
+++ b/main.css
@@ -197,6 +197,10 @@ a.active, a:hover{
 	font-size: 45px;
 	margin: 0;	
 	padding: 100px;
+        margin-left: auto;
+        margin-right: auto;
+	max-height: 100%;
+	max-width: 100%;
 	
 	
 
