--- a/main.css
+++ b/main.css
@@ -318,9 +318,11 @@ a.active, a:hover{
 
 @media only screen and (max-width: 992px) {
 	.txt4 {
-   margin-left: -30px;
-   margin-left: -25px;
-   font-size: 50px;
+ margin-left: auto;
+ margin-right: auto;
+ max-height: 100%;
+ max-width: 100%;
+ font-size: 50px;
 }
 }
 
