--- a/main.css
+++ b/main.css
@@ -303,10 +303,7 @@ a.active, a:hover{
 
 .txt4 {
       color: white;
-      text-align: cent
-	      
-	      
-	      er;
+      text-align: center;
       font-size: 65px;
       font-family: 'Monteserrat', sans-serif;
       padding: 80px;
