--- a/main.css
+++ b/main.css
@@ -315,11 +315,13 @@ a.active, a:hover{
 
 @media only screen and (max-width: 992px) {
 	.txt4 {
- margin-left: auto;
- margin-right: auto;
- max-height: 100%;
- max-width: 100%;
- font-size: 50px;
+           margin-left: auto;
+           margin-right: auto;
+           max-height: 100%;
+           max-width: 100%;
+           font-size: 50px;
+	   font-family: 'japa';
+ 
 }
 }
 
