--- a/main.css
+++ b/main.css
@@ -330,10 +330,11 @@ a.active, a:hover{
 }
 @media only screen and (max-width: 992px) {
 	.menu {
-    display: none;
-    width: 100%;
-    padding: 10rem 5rem;
-    background-color: #0c0c10;
+	margin-left: auto;
+        margin-right: auto;
+	max-height: 100%;
+	max-width: 100%;
+        background-color: #0c0c10;
 }
 }
 
