--- a/main.css
+++ b/main.css
@@ -330,6 +330,7 @@ a.active, a:hover{
 }
 @media only screen and (max-width: 992px) {
 	.menu {
+	width: 100px;
 	margin-left: auto;
         margin-right: auto;
 	max-height: 100%;
