--- a/main.css
+++ b/main.css
@@ -330,10 +330,11 @@ a.active, a:hover{
 }
 @media only screen and (max-width: 992px) {
 	.menu {
-	margin-left: auto;
-        margin-right: auto;
-	max-height: 100%;
-	max-width: 100%;
+	width:100px;
+        height:100px;
+        position:absolute;
+        top:50%;
+        left:50%;
         background-color: #0c0c10;
 }
 }
