--- a/main.css
+++ b/main.css
@@ -331,10 +331,12 @@ a.active, a:hover{
 @media only screen and (max-width: 992px) {
 	.menu {
 	width:100px;
-        height:100px;
-        position:absolute;
-        top:50%;
-        left:50%;
+    height:100px;
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-top:-50px;
+    margin-left:-50px;
         background-color: #0c0c10;
 }
 }
