--- a/main.css
+++ b/main.css
@@ -331,6 +331,7 @@ a.active, a:hover{
 @media only screen and (max-width: 992px) {
 	.menu {
 	width: 10px;
+	height: 40px;
         background-color: #0c0c10;
 }
 }
