--- a/main.css
+++ b/main.css
@@ -330,8 +330,10 @@ a.active, a:hover{
 }
 @media only screen and (max-width: 992px) {
 	.menu {
-	width: 10px;
-	height: 40px;
+	max-width:200px;
+        max-height:150px;
+        width: auto;
+        height: auto;
         background-color: #0c0c10;
 }
 }
