--- a/main.css
+++ b/main.css
@@ -334,7 +334,7 @@ a.active, a:hover{
         max-height:150px;
         width: auto;
         height: auto;
-        background-color: #0c0c10;
+        background-color: black;
 }
 }
 
