--- a/main.css
+++ b/main.css
@@ -328,6 +328,14 @@ a.active, a:hover{
     padding: 10rem 5rem;
     background-color: #0c0c10;
 }
+@media only screen and (max-width: 992px) {
+	.menu{
+    width: 100%;
+    padding: 10rem 5rem;
+    background-color: #0c0c10;
+}
+}
+	
 
 
 .menu-heading{
