--- a/main.css
+++ b/main.css
@@ -158,7 +158,7 @@ a.active, a:hover{
 	text-align: center;
 	color: white;
 	font-family: 'japa';
-	font-size: 60px;
+	font-size: 80px;
 	margin: 0;
 	padding: 250px;
 	background-size: cover;
@@ -187,8 +187,8 @@ a.active, a:hover{
 .txt2 {
 	color: white;
 	text-align: center;
-	font-size: 60px;
-	font-family: 'Monteserrat', sans-serif;
+	font-size: 80px;
+	font-family: 'japa';
 	padding: 200px;
 	margin: 0;
 	background: #8e2727;
@@ -304,8 +304,8 @@ a.active, a:hover{
 .txt4 {
       color: white;
       text-align: center;
-      font-size: 65px;
-      font-family: 'Monteserrat', sans-serif;
+      font-size: 75px;
+      font-family: 'japa';
       padding: 80px;
       margin: 0;
       background: #8e2727;
@@ -329,14 +329,12 @@ a.active, a:hover{
     background-color: #0c0c10;
 }
 @media only screen and (max-width: 992px) {
-	.menu{
+	.menu {
     width: 100%;
-    padding: 10rem 5rem;
+    padding: 00rem 0rem;
     background-color: #0c0c10;
 }
 }
-	
-
 
 .menu-heading{
     font-size: 12rem;
@@ -354,8 +352,15 @@ a.active, a:hover{
     justify-self: center;
     grid-gap: 2rem;
 }
-	
-
+@media only screen and (max-width: 992px) {
+	.menu-grid{
+	display: grid;
+    grid-template-rows: repeat(1, 2fr);
+    grid-template-columns: repeat(1, 1fr);
+    justify-self: center;
+    grid-gap: 2rem;
+}
+}
 
 .heading-secondary{
     font-size: 7rem;
@@ -433,6 +438,7 @@ a.active, a:hover{
     font-size: 1.4rem;
     padding: 1rem;
     text-align: center;
+    font-family: 'Baloo Tammudu 2', cursive;
 }
 
 
