--- a/main.css
+++ b/main.css
@@ -427,6 +427,7 @@ a.active, a:hover{
     overflow: hidden;
     box-shadow: 0 0 2rem rgba(0,0,0,.2);
     transition: all .4s ease;
+    margin: auto;
 }
 
 .menu-container:hover{
