--- a/main.css
+++ b/main.css
@@ -182,6 +182,21 @@ a.active, a:hover{
 
     }
 }
+@media screen and (max-width: 320px) {
+.txt1 {
+    color: white;
+    font-style: inherit;
+    font-family: 'japa';
+    font-size: 30px;
+    margin: auto;
+    padding: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 100%;
+    max-width: 100%;
+}
+}
+
 
 
 .txt2 {
