--- a/main.css
+++ b/main.css
@@ -296,6 +296,7 @@ a.active, a:hover{
     }
 }
 
+
 .moto {
 	transform: translate(500px, -1585px);
 	width: 200px;
@@ -351,6 +352,21 @@ a.active, a:hover{
  
 }
 }
+@media screen and (max-width: 320px) {
+.txt4 {
+    color: white;
+    font-style: inherit;
+    font-family: 'japa';
+    font-size: 30px;
+    margin: auto;
+    padding: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 100%;
+    max-width: 100%;
+}
+}
+
 
 .menu{
     width: 100%;
