--- a/main.css
+++ b/main.css
@@ -173,7 +173,7 @@ a.active, a:hover{
 	font-family: 'japa';
 	font-size: 30px;
 	margin: 0;
-	padding: 70px;
+	padding: auto;
 	background-size: cover;
 	margin-left: auto;
         margin-right: auto;
@@ -359,7 +359,7 @@ a.active, a:hover{
     font-family: 'japa';
     font-size: 40px;
     margin: auto;
-    padding: 50px;
+    padding: 85px;
     margin-left: auto;
     margin-right: auto;
     max-height: 100%;
