--- a/main.css
+++ b/main.css
@@ -173,7 +173,7 @@ a.active, a:hover{
 	font-family: 'japa';
 	font-size: 30px;
 	margin: 0;
-	padding: auto;
+	padding: 70px;
 	background-size: cover;
 	margin-left: auto;
         margin-right: auto;
