--- a/main.css
+++ b/main.css
@@ -222,6 +222,9 @@ a.active, a:hover{
         margin-right: auto;
 	max-height: 100%;
 	max-width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	
 	
 
