--- a/main.css
+++ b/main.css
@@ -478,7 +478,7 @@ a.active, a:hover{
 .menu-container{
     width: 100%;
     height: 50rem;
-    background-color: white;
+    background-color: #8e2727;
     border-radius: 5px;
     overflow: hidden;
     box-shadow: 0 0 2rem rgba(0,0,0,.2);
