--- a/main.css
+++ b/main.css
@@ -510,7 +510,7 @@ a.active, a:hover{
     font-size: 3rem;
     margin-top: 1rem;
     text-align: center;
-    color: #da6b1d;
+    color: #ffffff;
     text-shadow: 0 .4rem 2rem rgba(0,0,0,.4);
 
 
