--- a/main.css
+++ b/main.css
@@ -488,7 +488,7 @@ a.active, a:hover{
 
 .menu-container:hover{
     box-shadow: 0 0 5rem rgba(0,0,0,.4);
-    transform: scale(-1);
+    transform: rotate(360deg);
 }
 
 .menu-p{
