--- a/main.css
+++ b/main.css
@@ -412,6 +412,7 @@ a.active, a:hover{
     grid-template-columns: repeat(1, 1fr);
     justify-self: center;
     grid-gap: 2rem;
+    padding-bottom: 4rem;
 }
 }
 
@@ -510,6 +511,80 @@ a.active, a:hover{
     text-align: center;
     color: #ffffff;
     text-shadow: 0 .4rem 2rem rgba(0,0,0,.4);
+}
+
+
+.contact-background{
+	width: 1200px;
+	padding: 40px;
+	background: #ffffff;
+	margin-left: auto;
+    margin-right: auto;
+    max-height: 100%;
+    max-width: 100%;
+    height: 600px;	
+    border-radius: 20px;
+    font-family: 'japa';
+    background: #8e2727;
+
+}
+
+
+@media screen and (max-width: 992px) {
+	.contact-background{
+		border-radius: 10px;
+}
+}
+.contato {
+	font-size: 90px;
+	font-family: 'japa';
+	color: white;
+	text-align: center;
+	padding-bottom: 2rem;
+
+}
+@media screen and (max-width: 992px) {
+	.contato {
+	font-size: 60px;
+	font-family: 'japa';
+	color: white;
+	text-align: center;
+	 display: block;
+     margin-left: auto;
+     margin-right: auto;
+     max-width: 100%;
+     max-height: 100%;
+	
+}
+}
+.contato2 {
+	font-size: 50px;
+	font-family: 'japa';
+	color: white;
+	text-align: center;
+	padding-bottom: 2rem;
+}
+
+.email {
+	font-size: 50px;
+	font-family: 'japa';
+	color: white;
+	text-align: center;
+	padding-bottom: 2rem;
+}
+
+.insta {
+	width: 100px;
+	display: block;
+     margin-left: auto;
+     margin-right: auto;
+     max-width: 100%;
+     max-height: 100%;
+	
+
+ 
+
+
 
 
 
