--- a/main.css
+++ b/main.css
@@ -104,7 +104,7 @@ a.active, a:hover{
 		width: 100%;
 		height: 100vh;
 		background: gray;
-		top: 80px;
+		top: 70px;
 		left: -100%;
 		text-align: center;
 		transition: .5s;
@@ -154,24 +154,25 @@ a.active, a:hover{
 
 .txt1 {
 	text-align: center;
-	color: white;
+	color: #611f1f;
 	font-family: 'japa';
 	font-size: 80px;
 	margin: 0;
 	padding: 250px;
 	background-size: cover;
 	transition: 2s;
+	background-image: url(img/lugar.png);
    
 }
 
 @media screen and (max-width: 992px) {
 	.txt1 {
-	color: white;
+	color: #611f1f; 
 	font-style: inherit;
 	font-family: 'japa';
 	font-size: 30px;
 	margin: 0;
-	padding: 70px;
+	padding: 90px;
 	background-size: cover;
 	margin-left: auto;
         margin-right: auto;
@@ -180,6 +181,7 @@ a.active, a:hover{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-image: url(img/lugar.png);
 
     }
 }
@@ -204,9 +206,10 @@ a.active, a:hover{
 	text-align: center;
 	font-size: 80px;
 	font-family: 'japa';
-	padding: 200px;
+	padding: 100px;
 	margin: 0;
 	background: #8e2727;
+
 }
 @media screen and (max-width: 992px) {
 	.txt2 {
@@ -215,7 +218,7 @@ a.active, a:hover{
 	font-family: 'japa';
 	font-size: 45px;
 	margin: 0;	
-	padding: 100px;
+	padding: 30px;
         margin-left: auto;
         margin-right: auto;
 	max-height: 100%;
@@ -474,7 +477,7 @@ a.active, a:hover{
 }
 
 .menu-container{
-    width: 100%;
+    width: 95%;
     height: 50rem;
     background-color: #8e2727;
     border-radius: 5px;
@@ -484,10 +487,18 @@ a.active, a:hover{
     margin: auto;
 }
 
+
 .menu-container:hover{
     box-shadow: 0 0 5rem rgba(0,0,0,.4);
-    transform: rotate(360deg);
-    transition: 1s;
+    transform: scale(1.07);
+}
+
+@media only and screen(992px){
+	.menu-container:hover{
+    box-shadow: none;
+    transform: none;
+
+}
 }
 
 .menu-p{
@@ -523,7 +534,7 @@ a.active, a:hover{
     max-height: 100%;
     max-width: 100%;
     height: 600px;	
-    border-radius: 20px;
+    border-radius: 10px;
     font-family: 'japa';
     background: #8e2727;
 
@@ -532,7 +543,7 @@ a.active, a:hover{
 
 @media screen and (max-width: 992px) {
 	.contact-background{
-		border-radius: 10px;
+		width: 95%;
 }
 }
 .contato {
@@ -565,21 +576,38 @@ a.active, a:hover{
 	padding-bottom: 2rem;
 }
 
-.email {
-	font-size: 50px;
-	font-family: 'japa';
-	color: white;
-	text-align: center;
-	padding-bottom: 2rem;
-}
 
-.insta {
-	width: 100px;
-	display: block;
+
+.gmail {
+	 width: 80px;
+	 display: block;
      margin-left: auto;
      margin-right: auto;
      max-width: 100%;
      max-height: 100%;
+     padding-bottom: 2rem;
+     
+}
+.insta {
+	 width: 80px;
+ 	 display: block;
+     margin-left: auto;
+     margin-right: auto;
+     max-width: 100%;
+     max-height: 100%;
+       padding-bottom: 2rem;
+    
+}
+.face {
+	 width: 80px;
+	 display: block;
+     margin-left: auto;
+     margin-right: auto;
+     max-width: 100%;
+     max-height: 100%;
+       padding-bottom: 2rem;
+     
+}
 	
 
  
