--- a/main.css
+++ b/main.css
@@ -112,7 +112,7 @@ a.active, a:hover{
 		position: fixed;
 		width: 100%;
 		height: 100vh;
-		background: gray;
+		background: #03040c		;
 		top: 80px;
 		left: -100%;
 		text-align: center;
@@ -133,7 +133,7 @@ a.active, a:hover{
 	}
 	a:hover, a.active {
 		background: none;
-		color: black;
+		color: #8e2727;
 		
 	}
 	#check:checked ~ ul {
@@ -184,7 +184,7 @@ a.active, a:hover{
 	color: #611f1f; 
 	font-style: inherit;
 	font-family: 'japa';
-	font-size: 30px;
+	font-size: 35px;
 	margin: 0;
 	padding: 90px;
 	background-size: cover;
