--- a/main.css
+++ b/main.css
@@ -59,6 +59,7 @@ nav ul{
 	margin-right: 20px;
 	transition: 2s;
 	
+	
 }
 nav ul li{
 	display: inline-block;
@@ -625,7 +626,7 @@ a.active, a:hover{
     transition: 1s;
 }
 .face {
-	 width: 70px;
+	 width: 55px;
 	 display: block;
      margin-left: auto;
      margin-right: auto;
@@ -638,6 +639,8 @@ a.active, a:hover{
 .face:hover{
     box-shadow: 0 0 5rem rgba(0,0,0,.4);
     transform: scale(1.07);
+	transition: 1s;
+	animation-delay: 2s;
 
 }
 	
