--- a/main.css
+++ b/main.css
@@ -573,7 +573,7 @@ a:hover {
   max-width: 100%;
   max-height: 100%;
   padding-bottom: 2rem;
-  border-radius: 40%;
+  border-radius: 10px;
   transition: 1s;
 }
 .face:hover {
